--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,32 @@
 <resources>
-    <string name="app_name">FileServerClient</string>
+    <string name="app_name">文件服务器客户端</string>
+    <string name="server_connection">服务器连接</string>
+    <string name="connect">连接</string>
+    <string name="not_connected">未连接</string>
+    <string name="quick_actions">快速操作</string>
+    <string name="browse_files">浏览文件列表</string>
+    <string name="connection_history">连接历史</string>
+    <string name="server_url_hint">输入完整服务器地址 (例如: http://192.168.2.138:8080)</string>
+    <string name="connecting">正在连接服务器...</string>
+    <string name="connected">已连接</string>
+    <string name="connection_failed">连接失败</string>
+    <string name="connection_exception">连接异常</string>
+    <string name="browsing_files">浏览文件</string>
+    <string name="upload_files">上传文件</string>
+    <string name="select_files">选择文件</string>
+    <string name="upload">上传</string>
+    <string name="no_files_selected">未选择文件</string>
+    <string name="search_hint">搜索文件...</string>
+    <string name="search">搜索</string>
+    <string name="ready">就绪</string>
+    <string name="root_directory">根目录</string>
+    <string name="current_path">当前路径: %s</string>
+    <string name="loading_file_list">正在加载文件列表...</string>
+    <string name="file_count">找到 %d 个项</string>
+    <string name="uploading_files">正在上传 %d 个文件...</string>
+    <string name="upload_success">上传成功</string>
+    <string name="upload_failed">上传失败</string>
+    <string name="download_started">开始下载</string>
+    <string name="preview">预览</string>
+    <string name="download">下载</string>
 </resources>
