四库雏形。上传未实现。
Signed-off-by: 星宇 鞠 <1326603527@qq.com>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,4 +29,6 @@
     <string name="download_started">开始下载</string>
     <string name="preview">预览</string>
     <string name="download">下载</string>
+    <string name="video_count_format">%d个视频</string>
+    <string name="empty_folder">空文件夹</string>
 </resources>
